# Bonsai-Local-Studio-Core

./: .gitignore  ATTRIBUTIONS.md  CONTRIBUTING.md  LICENSE  README.md  package.json  pyproject.toml
backend/: __init__.py  eviction.py  pipeline.py  server.py  text_encoder_4bit.py
backend/tests/: smoke_checkpoint_compare.py  smoke_memory_flatline.py  smoke_pareto_sweep.py  smoke_te_4bit_ab.py  smoke_te_4bit_eviction.py  smoke_three_backends.py  test_agent_workflow.py  test_backends_endpoint.py  test_ensure_backend.py  test_generate_compare.py  test_news_briefing.py  test_portfolio_visual.py
backend_gpu/: pipeline_gpu.py
docs/: backend.md  backend_gpu.md  frontend.md
frontend/: .gitignore  package-lock.json  package.json
frontend/__tests__/: prompt-moderator.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/backends/: route.ts
frontend/app/api/chat/: route.ts
frontend/components/: batch-result-panel.tsx  bonsai-background.tsx  chat-client.tsx  compare-client.tsx  history-grid.tsx  providers.tsx  result-panel.tsx  settings-client.tsx  site-nav.tsx  studio-client.tsx  theme-toggle.tsx
frontend/components/ui/: alert.tsx  button.tsx  card.tsx  collapsible.tsx  input.tsx  textarea.tsx
frontend/lib/: backends.ts  compare-presets.ts  idb-history.ts  png-metadata.ts  prompt-moderator.ts  resolutions.ts  studio-settings.ts  use-backends.ts  use-compare-history.ts  use-history.ts
frontend/tokens/: design-tokens.json
scripts/: gen-design-tokens.py  snapshot-openapi.sh
tokens/: design-tokens.json
tokens/api/: openapi.json
(+8 files in other folders)
